k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-experiment
  namespace: fe-experiment-vite
  labels:
    app: fe-experiment
spec:
  selector:
    app: fe-experiment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
      name: http
  type: ClusterIP
