k8s/storybook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-experiment-storybook
  namespace: fe-experiment-vite
spec:
  selector:
    app: fe-experiment-storybook
  ports:
    - protocol: TCP
      port: 6006
      targetPort: 6006
      name: storybook-http
