k8s/storybook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fe-experiment-storybook
  namespace: fe-experiment-vite
  labels:
    app: fe-experiment-storybook
spec:
  host: fe-experiment-storybook.okd1.shinhancard.rd
  to:
    kind: Service
    name: fe-experiment-storybook
    weight: 100
  port:
    targetPort: storybook-http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
